content/v1.3.0/en/api/campaign-ext/BarrierInfo.md
---
title: "BarrierInfo"
---
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `BarrierInfo`
- [← Area / Back to campaign-ext](./)
- [↑ API Index](../)
- [🏠 Home v1.3.0](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# BarrierInfo

**Namespace:** SandBox.BoardGames
**Module:** SandBox.BoardGames
**Type:** `public class BarrierInfo`
**Area:** campaign-ext

## Overview

`BarrierInfo` lives in `SandBox.BoardGames`, and its public surface shows that it acts as a formal extension or data entry point for this subsystem.

## Mental Model

Start from namespace `SandBox.BoardGames` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Properties

| Name | Signature |
|------|-----------|
| `TileCount` | `public override int TileCount { get; }` |

## Key Methods

### InitializeUnits
`public override void InitializeUnits()`

**Purpose:** Initializes the state, resources, or bindings for `units`.

### InitializeTiles
`public override void InitializeTiles()`

**Purpose:** Initializes the state, resources, or bindings for `tiles`.

### InitializeSound
`public override void InitializeSound()`

**Purpose:** Initializes the state, resources, or bindings for `sound`.

### Reset
`public override void Reset()`

**Purpose:** Resets `reset` to its initial state.

### CalculateValidMoves
`public override List<Move> CalculateValidMoves(PawnBase pawn)`

**Purpose:** Handles logic related to `calculate valid moves`.

### SetPawnCaptured
`public override void SetPawnCaptured(PawnBase pawn, bool aiSimulation = false)`

**Purpose:** Sets the value or state of `pawn captured`.

### AIMakeMove
`public void AIMakeMove(Move move)`

**Purpose:** Handles logic related to `a i make move`.

### GetBlockingPawns
`public Dictionary<PawnBase, int> GetBlockingPawns(bool playerOneBlocked)`

**Purpose:** Gets the current value of `blocking pawns`.

### TakeBoardSnapshot
`public BoardGameSeega.BoardInformation TakeBoardSnapshot()`

**Purpose:** Handles logic related to `take board snapshot`.

### UndoMove
`public void UndoMove(ref BoardGameSeega.BoardInformation board)`

**Purpose:** Handles logic related to `undo move`.

### GetTile
`public TileBase GetTile(int x, int y)`

**Purpose:** Gets the current value of `tile`.

## Usage Example

```csharp
// First obtain a BarrierInfo instance from game state, then call one of its public methods
var value = new BarrierInfo();
value.InitializeUnits();
```

## See Also

- [Complete Class Catalog](../catalog)
- [Area catalog](../catalog-campaign)
